# static_executor

./: CMakeLists.txt  README.md  package.xml
include/static_executor/: executable_list.hpp  static_executor.hpp
include/static_executor/executors/: static_single_threaded_executor.hpp
src/: executable_list.cpp  static_executor.cpp
src/executors/: static_single_threaded_executor.cpp
