<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>static_executor</name>
  <version>0.0.1</version>
  <description>Library that adds alternative(s) to the default executor in ROS2</description>
  <maintainer email="martin.cornelis@nobleo.nl">Martin Cornelis</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
